<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailTrip">

    <TextView
        android:id="@+id/tripNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/tripNameDetail"
        android:textColor="@color/tripNameHeading"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripNameDetail">

        <TextView
            android:id="@+id/destinationDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destinationDetail"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_place_24"
            app:drawableTint="@color/iconDetail" />

        <TextView
            android:id="@+id/dateDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateDetail"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_calendar_today_24"
            app:drawableTint="@color/iconDetail" />

        <TextView
            android:id="@+id/riskAssessmentDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/riskAssessmentDetail"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_warning_amber_24"
            app:drawableTint="@color/iconDetail" />

        <TextView
            android:id="@+id/descriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionDetail"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_sticky_note_2_24"
            app:drawableTint="@color/iconDetail" />

        <TextView
            android:id="@+id/phoneDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneDetail"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_phone_android_24"
            app:drawableTint="@color/iconDetail" />

        <TextView
            android:id="@+id/hotelDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotelDetail"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/tripDetail"
            app:drawableLeftCompat="@drawable/ic_baseline_hotel_24"
            app:drawableTint="@color/iconDetail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:drawableLeftCompat="@drawable/ic_baseline_map_24"
                app:drawableTint="@color/map" />

            <HorizontalScrollView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/placeOnMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeOnMap"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="8dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/map"/>

            </HorizontalScrollView>


            <ImageView
                android:id="@+id/copyToClipboard"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_content_copy_24"
                android:contentDescription="@string/copyClipboard" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailInfo">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:drawableLeft="@drawable/ic_file_pen"
            android:drawableTint="@color/actionButton"
            android:background="@drawable/update_trip_button"
            android:text="@string/updateTrip"
            app:backgroundTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:drawableLeft="@drawable/ic_eraser"
            android:drawableTint="@color/actionButton"
            android:text="@string/deleteTrip"
            app:backgroundTint="@null"
            android:background="@drawable/delete_trip_button" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/actionExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionButton">

        <TextView
            android:id="@+id/showExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:text="@string/showExpense"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_slideshow_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addExpenseButton"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/add_expense_button"
            android:layout_alignParentEnd="true"
            app:backgroundTint="@null"
            android:background="@drawable/add_expense_button"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewExpense"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionExpense"
        />

</androidx.constraintlayout.widget.ConstraintLayout>