<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Entry">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <!--Trip Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tripNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tripName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/tripName"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Destination-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destinationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tripNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="16"
                android:inputType="text"
                android:hint="@string/destination"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destinationLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="date"
                android:hint="@string/date"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Description-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/description"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Support Phone Number-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="phone"
                android:hint="@string/phone"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Hotel-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hotelLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/hotel"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelSwitch"
            android:layout_marginTop="15dp"
            android:text="@string/assessment"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotelLayout"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assessment"
            android:background="@null"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            app:showText="true"
            android:textOn="@string/switchOn"
            android:textOff="@string/switchOff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelSwitch"
            android:layout_marginHorizontal="20dp"
            />


        <!--Submit-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/createTrip"
            app:backgroundTint="@null"
            android:background="@drawable/main_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assessment"/>

        <!--Reset data-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/resetButton"
            android:layout_marginTop="10dp"
            app:backgroundTint="@null"
            android:background="@drawable/reset_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


